--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@ nossos alunos para carreiras bem-sucedidas no mundo da tecnologia. Oferecemos
 cursos abrangentes em tópicos como Grafos, Programação Web e Mobile, Sistemas
 Operacionais, Banco de Dados, Engenharia de Software e Redes de Computadores.
 Nossa missão é capacitar os estudantes com habilidades relevantes e atualizadas
-para enfrentar os desafios do mercado de trabalho atual.</p>
+para enfrentar os desafios do mercado de trabalho atual.
+        </p>
         <ul>
             <li><a href="#">Grafos</a></li>
             <li><a href="#">Programação Web e Mobile</a></li>
